# mosek

./: .gitignore  CMakeLists.txt  CTestConfig.cmake  Makefile  README.md  addpath_mosek.m.in  javaaddpathProtectGlobals.m  mosek-c-targets.cmake.in  mosek-config.cmake.in  mosek-java-targets.cmake.in  mosek.pc.in  rmpath_mosek.m.in
cmake/modules/3.7/: FindMatlab.cmake
test/: CMakeLists.txt
